--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.35.2",
     "@radix-ui/react-slot": "^1.2.4",
+    "@stream-io/node-sdk": "^0.7.21",
+    "@stream-io/video-react-sdk": "^1.27.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.29.3",
