--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.35.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
     "@stream-io/node-sdk": "^0.7.21",
     "@stream-io/video-react-sdk": "^1.27.1",
@@ -17,7 +18,8 @@
     "clsx": "^2.1.1",
     "convex": "^1.29.3",
     "lucide-react": "^0.554.0",
-    "next": "14.2.23",
+    "next": "^14.2.25",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "svix": "^1.81.0",
