--- a/package.json
+++ b/package.json
@@ -9,32 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.35.2",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-slot": "^1.2.4",
-    "@radix-ui/react-switch": "^1.2.6",
-    "@stream-io/node-sdk": "^0.7.21",
-    "@stream-io/video-react-sdk": "^1.27.1",
+    "@clerk/nextjs": "^6.9.10",
+    "@monaco-editor/react": "^4.6.0",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@stream-io/node-sdk": "^0.4.9",
+    "@stream-io/video-react-sdk": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "convex": "^1.29.3",
-    "lucide-react": "^0.554.0",
-    "next": "^14.2.25",
-    "next-themes": "^0.4.6",
+    "convex": "^1.18.2",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.471.1",
+    "next": "14.2.23",
+    "next-themes": "^0.4.4",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
-    "react-hot-toast": "^2.6.0",
-    "svix": "^1.81.0",
-    "tailwind-merge": "^3.4.0",
+    "react-hot-toast": "^2.5.1",
+    "react-resizable-panels": "^2.1.7",
+    "svix": "^1.45.1",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.23",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
