--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.9.10",
+    "@clerk/nextjs": "^6.35.2",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -26,7 +26,7 @@
     "convex": "^1.18.2",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.471.1",
-    "next": "14.2.23",
+    "next": "^15.2.3",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -41,6 +41,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "^15.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
